--- a/index.html
+++ b/index.html
@@ -99,6 +99,28 @@
                             <div class="address">Rich Kilmer</div>
                         </div>
                     </div>
+
+                    <div class="details-group">
+                        <div class="time">9:00</div>
+                        <div>
+                            <div class="event-name">Abrave new world: Learning iOS for the Ruby Refugee</div>
+                            <div class="address">Nick Quaranto, 37 signals</div>
+                        </div>
+                    </div>
+                    <div class="details-group">
+                        <div class="time">9:45</div>
+                        <div>
+                            <div class="heading">Behaviour Driven Motion using Calabash</div>
+                            <div class="address">Karl Krukow, LessPainfull</div>
+                        </div>
+                    </div>
+                    <div class="details-group">
+                        <div class="time">10:30</div>
+                        <div>
+                            <div class="heading">Controling the Real World with RubyMotion</div>
+                            <div class="address">Rich Kilmer</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
